--- a/package.json
+++ b/package.json
@@ -7,5 +7,5 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "A vue entry plugin for moibile app"
+  "description": "A vue entry plugin for mobile app"
 }
