--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "vue-entry-plugin-mobile",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "A vue entry plugin for mobile app"
+  "description": "A vue entry plugin for mobile app",
+  "dependencies": {
+    "fastclick": "^1.0.6"
+  }
 }
